src/ariel-os-macros/tests/ui/config/misspelled_config_kind.stderr
error: unsupported parameter (`network`, `rcc`, `usb` are supported)
 --> tests/ui/config/misspelled_config_kind.rs:9:20
  |
9 | #[ariel_os::config(networkk)]
  |                    ^^^^^^^^
